# gol-rs-cw

./: .gitignore  Cargo.toml  README.md
benches/: bench.rs
src/: args.rs  lib.rs  main.rs
src/broker/: broker.rs
src/decode/: cell.rs  coordinates.rs  function_call.rs  mod.rs  packet.rs  protocol.md  rpc.rs
src/gol/: distributor.rs  event.rs  io.rs  mod.rs
src/sdl/: loop.rs  mod.rs  window.rs
src/stubs/: stubs.rs
src/util/: avgturns.rs  cell.rs  logger.rs  mod.rs  traits.rs
tests/: count_test.rs  gol_test.rs  pgm_test.rs  sdl_test.rs  utils.rs
