[package]
name = "gol-rs"
version = "1.0.0"
edition = "2021"
homepage = "https://uob-csa.github.io/gol-docs/"
repository = "https://github.com/UoB-CSA/gol-rs-skeleton"
description = "The Game of Life coursework for Bristol Computer System A unit."

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
bytemuck = { version = "1.18", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
crossbeam = "0.8"
csv = "1.3"
env_logger = "0.11"
flume = "0.11"
image = "0.25.2"
log = "0.4"
num-traits = "0.2"
rayon = "1.10"
sdl2 = { version = "0.37", features = ["unsafe_textures"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
num_cpus = "1.16"

[profile.release]
panic = "abort"
debug = 2

[profile.dev]
panic = "abort"

[lib]
doctest = false

[[test]]
name = "gol"
path = "tests/gol_test.rs"
harness = false

[[test]]
name = "count"
path = "tests/count_test.rs"
harness = false

[[test]]
name = "pgm"
path = "tests/pgm_test.rs"
harness = false

[[test]]
name = "sdl"
path = "tests/sdl_test.rs"
harness = false

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false
